generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

model Lead {
  id        String                  @id @default(cuid())
  name      String
  email     String                  @unique
  mobile    String
  postcode  String
  createdAt DateTime                @default(now())
  updatedAt DateTime                @updatedAt
  services  LeadService[]
  changes   ServiceInterestChange[]

  @@index([createdAt])
}

model Service {
  id        String        @id @default(cuid())
  code      String        @unique
  label     String
  active    Boolean       @default(true)
  createdAt DateTime      @default(now())
  leads     LeadService[]
}

model LeadService {
  leadId    String
  serviceId String
  createdAt DateTime @default(now())
  lead      Lead     @relation(fields: [leadId], references: [id], onDelete: Cascade)
  service   Service  @relation(fields: [serviceId], references: [id], onDelete: Cascade)

  @@id([leadId, serviceId])
  @@index([serviceId])
}

model ServiceInterestChange {
  id          String   @id @default(cuid())
  leadId      String
  serviceCode String
  action      String   // "ADDED" | "REMOVED"
  source      String   @default("registration") // or "admin_edit"
  changedAt   DateTime @default(now())
  lead        Lead     @relation(fields: [leadId], references: [id], onDelete: Cascade)

  @@index([leadId])
}
